--- a/src/components/ModelList/_FilterPanel.scss
+++ b/src/components/ModelList/_FilterPanel.scss
@@ -6,6 +6,7 @@
     @include label;
     color: $charcoalLightest;
     font-weight: bold;
+    margin-bottom: 32px;
     text-transform: uppercase;
   }
 }
