--- a/src/components/ModelList/_ModelCard.scss
+++ b/src/components/ModelList/_ModelCard.scss
@@ -13,6 +13,7 @@
 
   &__divider {
     border: 1px solid $smokeDark;
+    margin-bottom: 16px;
   }
 
   &__model-name {
