--- a/src/components/ModelList/_ModelHeader.scss
+++ b/src/components/ModelList/_ModelHeader.scss
@@ -19,6 +19,7 @@
   &__title {
     @include headline1;
     color: $white;
+    margin-bottom: 16px;
   }
 
   &__description {
